--- a/src/components/Lesson/Lesson.scss
+++ b/src/components/Lesson/Lesson.scss
@@ -18,3 +18,25 @@
   // responsive font
   @include responsiveFontSizes;
 }
+
+@mixin style-props($colorBackground, $colorBorder) {
+  text-align: center;
+  font-size: 1em;
+  border-radius: 10px;
+
+  padding: 12px 0 0 10px;
+  margin: 30px 0;
+
+  background-color: $colorBackground;
+  border: 1px solid $colorBorder;
+}
+
+.containerStudent {
+  composes: container;
+  @include style-props($color-green-lighter, $color-green-light);
+}
+
+.containerTeacher {
+  composes: container;
+  @include style-props($color-blue-lighter, $color-blue-light);
+}
