--- a/src/components/Lesson/Lesson.scss
+++ b/src/components/Lesson/Lesson.scss
@@ -20,23 +20,20 @@
 }
 
 @mixin style-props($colorBackground, $colorBorder) {
+  max-width: 650px;
   text-align: center;
   font-size: 1em;
   border-radius: 10px;
-  padding: 12px 0 0 10px;
-  margin: 30px 0;
+  padding: 15px 0 5px;
+  margin: 30px auto 20px;
   background-color: $colorBackground;
   border: 1px solid $colorBorder;
 }
 
 .containerStudent {
-  composes: container;
-
   @include style-props($color-green-lighter, $color-green-light);
 }
 
 .containerTeacher {
-  composes: container;
-
   @include style-props($color-blue-lighter, $color-blue-light);
 }
