--- a/src/components/PlaylistPage/LessonItem.scss
+++ b/src/components/PlaylistPage/LessonItem.scss
@@ -24,7 +24,10 @@
 }
 
 .tooltip {
+  :global(.tooltip-inner) {
+    max-width: 360px;
+  }
   img {
-    max-width: 180px;
+    max-height: 180px;
   }
 }
