--- a/src/pages/PlaylistPage.scss
+++ b/src/pages/PlaylistPage.scss
@@ -11,7 +11,6 @@
 }
 
 .courseInfoBtn {
-  margin-left: auto;
   &,
   &:hover,
   &:active:focus,
@@ -25,10 +24,9 @@
 }
 
 /* Media screen */
-@media only screen and (max-width: 1173px) {
+@media only screen and (max-width: 1191px) {
   .courseInfoBtn {
-    margin-top: 10px;
-    margin-left: 0;
+    margin: 10px 0 10px 0;
     display: inline-block;
   }
 }
