--- a/src/pages/PlaylistPage.scss
+++ b/src/pages/PlaylistPage.scss
@@ -26,7 +26,7 @@
 /* Media screen */
 @media only screen and (max-width: 1191px) {
   .courseInfoBtn {
-    margin: 10px 0 10px 0;
+    margin: 10px 0;
     display: inline-block;
   }
 }
