--- a/src/components/Filter/FilterGroup.scss
+++ b/src/components/Filter/FilterGroup.scss
@@ -8,3 +8,16 @@
     border-bottom: 1px solid $color-gray-light;
   }
 }
+
+.name {
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.glyph {
+  &:hover {
+    cursor: pointer;
+  }
+  font-size: 0.8em;
+}
