--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -30,6 +30,11 @@ $lkk-dark-grey: #3a3a3a;
 $lkk-grey: #444;
 $lkk-offwhite: #f2f2f2;
 
+$color-level1: $color-green;
+$color-level2: #368bd8;
+$color-level3: #d63838;
+$color-level4: #333;
+
 // Fonts
 $font-size-xs-pct: 106.25%; // 17px if base font is 16px
 $font-size-sm-pct: 118.75%; // 19px if base font is 16px
