--- a/src/styles/_panels.scss
+++ b/src/styles/_panels.scss
@@ -7,6 +7,7 @@
     $color-green-light,
     darken(adjust-hue($color-green-light, -10), 5%)
   );
+  background-color: $color-green-lighter;
 }
 
 .panel-teacher {
@@ -16,4 +17,5 @@
     $color-blue-light,
     darken(adjust-hue($color-blue-light, -10), 5%)
   );
+  background-color: $color-blue-lighter;
 }
