Change courseinfobutton and courseinfo into a collapsible panel. (#341)
* Change courseinfobutton and courseinfo into a collapsible panel.

* Create CollapsiblePanel, and make courseinfo look nicer. Also change order of filter and filterlabels in mobile view.

--- a/src/pages/PlaylistPage.scss
+++ b/src/pages/PlaylistPage.scss
@@ -1,39 +1,7 @@
 .filter {
-  margin-top: 63px;
+  margin-top: 133px;
 }
 
-.headerRow {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  margin-top: 22px;
-  margin-bottom: 5px;
-}
-
-.courseInfoBtn {
-  margin-left: auto;
-  &,
-  &:hover,
-  &:active:focus,
-  &:focus {
-    outline: none;
-  }
-}
-
-.glyph {
-  padding-right: 6px;
-}
-
-/* Media screen */
-@media only screen and (max-width: 1191px) {
-  .courseInfoBtn {
-    margin: 10px 0;
-    display: inline-block;
-  }
-}
-
-@media only screen and (max-width: 767px) {
-  .headerRow {
-    display: inline-block;
-  }
+.jumpTo {
+  margin-top: 70px;
 }
