--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -35,6 +35,18 @@ $color-level2: #368bd8;
 $color-level3: #d63838;
 $color-level4: #333;
 
+//	Scratch block colors
+$color-scratchblock-motion:     #505fd7;
+$color-scratchblock-looks:      #9b33d9;
+$color-scratchblock-sound:      #d000c2;
+$color-scratchblock-pen:        #00a16f;
+$color-scratchblock-data:       #ff7500;
+$color-scratchblock-events:     #d38117;
+$color-scratchblock-control:    #e9aa00;
+$color-scratchblock-sensing:    #00a3e6;
+$color-scratchblock-operators:  #00c114;
+$color-scratchblock-moreblocks: #71009a;
+
 // Fonts
 $font-size-xs-pct: 106.25%; // 17px if base font is 16px
 $font-size-sm-pct: 118.75%; // 19px if base font is 16px
