--- a/src/components/PlaylistPage/LevelNavigation.scss
+++ b/src/components/PlaylistPage/LevelNavigation.scss
@@ -1,3 +1,19 @@
-.listGroupItem {
+@import '../../styles/variables';
+
+.listGroupItem{
   position: static; // To avoid bottom part of outline from being overwritten by the next element
+}
+
+.student {
+  background-color: $color-green-lighter;
+  &:hover {
+    box-shadow: inset 0 0 0 9999px rgba(0, 0, 0, 0.1);
+  }
+}
+
+.teacher {
+  background-color: $color-blue-lighter;
+  &:hover {
+    box-shadow: inset 0 0 0 9999px rgba(0, 0, 0, 0.1);
+  }
 }
