--- a/src/components/PlaylistPage/LevelNavigation.scss
+++ b/src/components/PlaylistPage/LevelNavigation.scss
@@ -2,18 +2,17 @@
 
 .listGroupItem {
   position: static; // To avoid bottom part of outline from being overwritten by the next element
+  font-size: 1.125em;
+  font-weight: bold;
+  &:hover {
+    box-shadow: inset 0 0 0 9999px rgba(0, 0, 0, 0.1);
+  }
 }
 
 .student {
   background-color: $color-green-lighter;
-  &:hover {
-    box-shadow: inset 0 0 0 9999px rgba(0, 0, 0, 0.1);
-  }
 }
 
 .teacher {
   background-color: $color-blue-lighter;
-  &:hover {
-    box-shadow: inset 0 0 0 9999px rgba(0, 0, 0, 0.1);
-  }
 }
