Include styling of list-group-item in panel-student and panel-teacher, and style Filter and LevelNavigation the same way.

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -33,7 +33,7 @@ $lkk-offwhite: #f2f2f2;
 $color-level1: $color-green;
 $color-level2: #368bd8;
 $color-level3: #d63838;
-$color-level4: #333;
+$color-level4: $color-gray-dark;
 
 //	Scratch block colors
 $color-scratchblock-motion:     #505fd7;
