Style Filter and LevelNavigation (#358)
* Style filter

* Include styling of list-group-item in panel-student and panel-teacher, and style Filter and LevelNavigation the same way.

* Fix stylelint

* CR fixes: Fix filter info button styles, and increase size of LevelNavigation items.

* Adjust height of filter and levelnavigation

--- a/src/components/PlaylistPage/LevelNavigation.scss
+++ b/src/components/PlaylistPage/LevelNavigation.scss
@@ -1,16 +1,3 @@
-@import '../../styles/variables';
-
-.listGroupItem {
-  position: static; // To avoid bottom part of outline from being overwritten by the next element
-  &:hover {
-    box-shadow: inset 0 0 0 9999px rgba(0, 0, 0, 0.1);
-  }
-}
-
-.student {
-  background-color: $color-green-lighter;
-}
-
-.teacher {
-  background-color: $color-blue-lighter;
+.name {
+  font-size: 1.125em;
 }
