--- a/src/components/Filter/LessonFilter.scss
+++ b/src/components/Filter/LessonFilter.scss
@@ -1,19 +1,16 @@
 @import '../../styles/variables';
 
-.filterInfoButton {
-  &,
-  &:hover,
-  &:active:focus,
-  &:focus {
-    background: transparent;
-    text-decoration: none;
-    border: none;
-    outline: none;
-  }
-  color: gray;
+.filterInfo {
   font-size: 1.1em;
   float: right;
-  margin-top: -9px;
-  margin-right: -14px;
-  transition: 0.1s;
+  padding-top: 1px;
+  cursor: pointer;
+
+  &:hover {
+    color: $color-gray;
+  }
+
+  &:active {
+    color: black;
+  }
 }
