--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,9 +3,9 @@
 
 // Colors
 $color-white-snow: #fafafa;
-$color-gray: #656565;
 $color-gray-lighter: #f2f2f2;
 $color-gray-light: #dadada;
+$color-gray: #656565;
 $color-gray-dark: #333;
 
 $color-green: #46cc46;
@@ -33,7 +33,19 @@ $lkk-offwhite: #f2f2f2;
 $color-level1: $color-green;
 $color-level2: #368bd8;
 $color-level3: #d63838;
-$color-level4: #333;
+$color-level4: $color-gray-dark;
+
+//	Scratch block colors
+$color-scratchblock-motion:     #505fd7;
+$color-scratchblock-looks:      #9b33d9;
+$color-scratchblock-sound:      #d000c2;
+$color-scratchblock-pen:        #00a16f;
+$color-scratchblock-data:       #ff7500;
+$color-scratchblock-events:     #d38117;
+$color-scratchblock-control:    #e9aa00;
+$color-scratchblock-sensing:    #00a3e6;
+$color-scratchblock-operators:  #00c114;
+$color-scratchblock-moreblocks: #71009a;
 
 // Fonts
 $font-size-xs-pct: 106.25%; // 17px if base font is 16px
