--- a/src/components/CourseList/CourseItem.scss
+++ b/src/components/CourseList/CourseItem.scss
@@ -34,11 +34,11 @@
 }
 
 .courseName {
-  @media screen and (min-width: $screen-xs-max) {
-    font-size: 1.3em;
+  @media screen and (max-width: $screen-xs-max) {
+    font-size: 1.15em;
   }
   white-space: nowrap;
-  font-size: 1.15em;
+  font-size: 1.3em;
 }
 
 .lessonCount {
