Support for longer names for external courses (#348)
* fix for longer names

* cr fix

* changer order

* cr

--- a/src/components/CourseList/CourseItem.scss
+++ b/src/components/CourseList/CourseItem.scss
@@ -34,7 +34,12 @@
 }
 
 .courseName {
+  white-space: nowrap;
   font-size: 1.3em;
+
+  @media screen and (max-width: $screen-xs-max) {
+    font-size: 1.15em;
+  }
 }
 
 .lessonCount {
