--- a/src/components/CourseList/CourseItem.scss
+++ b/src/components/CourseList/CourseItem.scss
@@ -45,3 +45,12 @@
 .lessonCount {
   color: $color-gray;
 }
+
+.tooltip {
+  :global(.tooltip-inner) {
+    max-width: 320px;
+  }
+  img {
+    max-height: 180px;
+  }
+}
