Suggestions for fixes to PR (collapse filter state in state tree)

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,6 +5,7 @@
 $color-white-snow: #fafafa;
 $color-gray-lighter: #f2f2f2;
 $color-gray-light: #dadada;
+$color-gray-medium: #a0a0a0;
 $color-gray: #656565;
 $color-gray-dark: #333;
 
