--- a/src/components/Filter/FilterGroup.scss
+++ b/src/components/Filter/FilterGroup.scss
@@ -7,6 +7,13 @@
   }
 }
 
+.somethingChecked {
+  color: $color-gray-medium;
+  &:hover {
+    cursor: not-allowed;
+  }
+}
+
 .glyph {
   font-size: 0.8em;
   padding-right: 0.5em;
