--- a/src/components/TooltipComponent.scss
+++ b/src/components/TooltipComponent.scss
@@ -1,8 +1,21 @@
+@import '../styles/variables';
+
 .tooltip {
   :global(.tooltip-inner) {
-    max-width: 320px;
+    max-width: 400px;
+    font-size: 1.5em;
   }
   img {
-    max-height: 180px;
+    max-height: 200px;
+  }
+
+  @media screen and (max-width: $screen-xs-max) {
+    :global(.tooltip-inner) {
+      max-width: 320px;
+      font-size: 1em;
+    }
+    img {
+      max-height: 180px;
+    }
   }
 }
