ModeDropdown for mobilemode

--- a/src/components/Navigation/ModeDropdown.scss
+++ b/src/components/Navigation/ModeDropdown.scss
@@ -1,4 +1,12 @@
+@import '../../styles/variables';
+
 .gadgetContainer {
   display: inline-block;
   padding: 3px 5px;
+}
+
+.onlyMode {
+  @media (max-width: $screen-xs-max) {
+    display: none;
+  }
 }
