Issue 360 Scroll into view for mobile (#396)
* fixed issue 360

* stylelint

* swtiched order in mobilemode

* add scroll-to-component

* Center heading instead of div

--- a/src/pages/PlaylistPage.scss
+++ b/src/pages/PlaylistPage.scss
@@ -1,4 +1,9 @@
+@import '../styles/variables';
+
 .topMargin {
   margin-top: 136px;
-}
 
+  @media (max-width: $screen-xs-max) {
+    margin-top: 0;
+  }
+}
