--- a/src/components/PlaylistPage/LessonItem.scss
+++ b/src/components/PlaylistPage/LessonItem.scss
@@ -22,6 +22,7 @@
 
 .instructionBtn {
   margin-left: auto;
+  margin-right: 7px;
 }
 
 .title {
@@ -31,4 +32,20 @@
 
 .progress {
   opacity: 0.5;
+}
+
+.marginFix {
+  margin-left: auto;
+}
+
+.glyph {
+  font-size: 1.3em;
+
+  &:hover {
+    color: $color-gray;
+  }
+
+  &:active {
+    color: black;
+  }
 }
