removed improvepage and footer from print

--- a/src/components/Lesson/ImprovePage.scss
+++ b/src/components/Lesson/ImprovePage.scss
@@ -9,6 +9,11 @@
 /* Container for improve box */
 .container {
   margin: 10px 30px;
+
+  @media print {
+    display: none;
+    visibility: visible;
+  }
 }
 
 .improvePageBox {
