removed buttons and add coursename on top of print

--- a/src/components/Lesson/Lesson.scss
+++ b/src/components/Lesson/Lesson.scss
@@ -18,3 +18,11 @@
   // responsive font
   @include responsiveFontSizes;
 }
+
+.box {
+  display: none;
+
+  @media print {
+    display: block;
+  }
+}
