--- a/src/components/CourseList/CourseItem.scss
+++ b/src/components/CourseList/CourseItem.scss
@@ -36,10 +36,15 @@
 .courseName {
   white-space: nowrap;
   font-size: 1.3em;
+  color: black;
 
   @media screen and (max-width: 500px) {
     font-size: 1em;
   }
+}
+
+a:link {
+  text-decoration: none;
 }
 
 .lessonCount {
