some more styling

--- a/src/pages/PlaylistPage.scss
+++ b/src/pages/PlaylistPage.scss
@@ -7,3 +7,13 @@
     margin-top: 0;
   }
 }
+
+.noMatchingLessons {
+  font-size: 1.25em;
+  font-weight: bold;
+  margin-top: 70px;
+
+  @media (max-width: $screen-xs-max) {
+    margin-top: 0;
+  }
+}
