--- a/src/pages/PlaylistPage.scss
+++ b/src/pages/PlaylistPage.scss
@@ -1,9 +1,14 @@
 @import '../styles/variables';
 
 .topMargin {
-  margin-top: 136px;
+  margin-top: 63px;
 
   @media (max-width: $screen-xs-max) {
     margin-top: 0;
   }
+}
+
+.noMatchingLessons {
+  font-size: 1.25em;
+  font-weight: bold;
 }
