rearranged again and use autoaffix

--- a/src/pages/PlaylistPage.scss
+++ b/src/pages/PlaylistPage.scss
@@ -8,6 +8,24 @@
   }
 }
 
+.topMarginFixed {
+  margin-top: 63px;
+  position: fixed;
+
+  @media (max-width: $screen-xs-max) {
+    margin-top: 0;
+    position: static;
+  }
+}
+
+.fixed {
+  position: fixed;
+
+  @media (max-width: $screen-xs-max) {
+    position: static;
+  }
+}
+
 .noMatchingLessons {
   font-size: 1.25em;
   font-weight: bold;
