Render scratch-blocks in browser, but not for static html.

--- a/src/components/Lesson/Content.scss
+++ b/src/components/Lesson/Content.scss
@@ -48,11 +48,11 @@ $checkbox-blue: #abdbea;
 }
 
 // scratch code blocks
-pre.blocks,
-code.b {
-  background-color: inherit;
-  border: 0;
-}
+//pre.blocks,
+//code.b {
+//  background-color: inherit;
+//  border: 0;
+//}
 
 // code blocks
 pre > code {
