--- a/src/components/Lesson/MainLanguageButton.scss
+++ b/src/components/Lesson/MainLanguageButton.scss
@@ -1,7 +1,23 @@
+@import '../../styles/variables';
+
+.textMargin {
+  margin-right: $flag-width + $space-between-text-and-flag;
+
+  @media (max-width: $screen-xs-max) {
+    display: none;
+  }
+}
+
 .container {
   margin: 10px 10px 0 0;
 
   @media print {
     display: none;
   }
+}
+
+.flag {
+  width: $flag-width;
+  height: $flag-height;
+  float: right;
 }
