Comment scratchblocks back in. Was commented out in puppeteer PR. Not sure why.

--- a/src/components/Lesson/Content.scss
+++ b/src/components/Lesson/Content.scss
@@ -47,12 +47,12 @@ $checkbox-blue: #abdbea;
   @include styledList;
 }
 
-// scratch code blocks
-//pre.blocks,
-//code.b {
-//  background-color: inherit;
-//  border: 0;
-//}
+ scratch code blocks
+pre.blocks,
+code.b {
+  background-color: inherit;
+  border: 0;
+}
 
 // code blocks
 pre > code {
