Fix: A comment was not commented.

--- a/src/components/Lesson/Content.scss
+++ b/src/components/Lesson/Content.scss
@@ -47,7 +47,7 @@ $checkbox-blue: #abdbea;
   @include styledList;
 }
 
- scratch code blocks
+// scratch code blocks
 pre.blocks,
 code.b {
   background-color: inherit;
