--- a/src/components/Lesson/MainLanguageButton.scss
+++ b/src/components/Lesson/MainLanguageButton.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables';
 
 .textMargin {
-  margin-right: $flag-width + $space-between-text-and-flag;
+  margin-left: $space-between-text-and-flag;
 
   @media (max-width: $screen-xs-max) {
     display: none;
@@ -19,5 +19,4 @@
 .flag {
   width: $flag-width;
   height: $flag-height;
-  float: right;
 }
