--- a/src/components/Lesson/PdfButton.scss
+++ b/src/components/Lesson/PdfButton.scss
@@ -9,7 +9,7 @@
 }
 
 .textMargin {
-  margin-right: 5px;
+  margin-left: 10px;
 
   @media (max-width: $screen-xs-max) {
     display: none;
@@ -18,10 +18,4 @@
 
 .icon {
   margin-top: 2px;
-  float: right;
-
-  @media (max-width: $screen-xs-max) {
-    margin-top: 0;
-    font-size: 1.5em;
-  }
 }
