--- a/src/components/Lesson/ResetButton.scss
+++ b/src/components/Lesson/ResetButton.scss
@@ -9,7 +9,7 @@
 }
 
 .textMargin {
-  margin-right: 5px;
+  margin-left: 10px;
 
   @media (max-width: $screen-xs-max) {
     display: none;
@@ -17,11 +17,5 @@
 }
 
 .icon {
-  margin-top: 2px;
-  float: right;
-
-  @media (max-width: $screen-xs-max) {
-    margin-top: 0;
-    font-size: 1.5em;
-  }
+  margin-top: 3px;
 }
