--- a/src/components/InstructionButton.scss
+++ b/src/components/InstructionButton.scss
@@ -1,7 +1,7 @@
 @import '../styles/variables';
 
 .textMargin {
-  margin-right: 5px;
+  margin-left: 10px;
 
   @media (max-width: $screen-xs-max) {
     display: none;
@@ -10,10 +10,4 @@
 
 .icon {
   margin-top: 2px;
-  float: right;
-
-  @media (max-width: $screen-xs-max) {
-    margin-top: 0;
-    font-size: 1.5em;
-  }
 }
