Issue 427 icon on button (#438)
* Add icons

* check for include function

* add icon go dropdown

* icons on menuitems

* icons on left side

* last button

--- a/src/components/InstructionButton.scss
+++ b/src/components/InstructionButton.scss
@@ -1,12 +1,4 @@
-@import '../../styles/variables';
-
-.container {
-  margin: 10px 10px 0 0;
-
-  @media print {
-    display: none;
-  }
-}
+@import '../styles/variables';
 
 .textMargin {
   margin-left: 10px;
