--- a/src/components/PopoverComponent.scss
+++ b/src/components/PopoverComponent.scss
@@ -2,16 +2,18 @@
 
 .popover {
   max-width: $screen-xs-max;
-  font-size: 1.3em;
   img {
-    max-height: 200px;
+    width: 100%;
+    height: 100%;
+    max-width: 200px;
+    max-height: 250px;
   }
 
   @media screen and (max-width: $screen-xs-max) {
-    font-size: 1em;
     margin-right: 0;
     img {
-      max-height: 100px;
+      max-width: 100px;
+      max-height: 125px;
     }
   }
 }
