--- a/src/components/Lesson/Progress.scss
+++ b/src/components/Lesson/Progress.scss
@@ -1,5 +1,6 @@
-.marginTop {
+.progressBar {
   margin-top: 20px;
+  position: relative;
 
   @media print {
     display: none;
@@ -9,6 +10,6 @@
 .label {
   position: absolute;
   display: block;
-  width: 96%;
+  width: 100%;
   color: black;
 }
