add flag to lessonitem

--- a/src/components/PlaylistPage/LessonItem.scss
+++ b/src/components/PlaylistPage/LessonItem.scss
@@ -30,6 +30,12 @@
   margin-right: 5px;
 }
 
+.flag {
+  width: $flag-width;
+  height: $flag-height;
+  margin-right: 5px;
+}
+
 .instructionButton {
   margin-right: 5px;
 }
