--- a/src/index-template.ejs
+++ b/src/index-template.ejs
@@ -3,19 +3,20 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title><%- pageTitle -%></title>
 
-    <% for (key in htmlWebpackPlugin.files.css) { %>
-    <link href="<%= htmlWebpackPlugin.files.css[key] %>" rel="stylesheet">
-    <% } %>
+    <% cssAssets.forEach(function(file){ %>
+    <link href="<%- file -%>" rel="stylesheet">
+    <% }); %>
 
-    <%= htmlWebpackPlugin.options.appcss %>
+    <%- appCss -%>
 </head>
 <body>
-    <div id="app"><%= htmlWebpackPlugin.options.appcontent %></div>
+    <div id="app"><%- appHtml -%></div>
 
-    <% for (key in htmlWebpackPlugin.files.chunks) { %>
-    <script src="<%= htmlWebpackPlugin.files.chunks[key].entry %>" type="text/javascript"></script>
-    <% } %>
+    <% jsAssets.forEach(function(file){ %>
+    <script src="<%- file -%>" async></script>
+    <% }); %>
+
 </body>
 </html>
