--- a/src/index-template.ejs
+++ b/src/index-template.ejs
@@ -3,20 +3,21 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title><%- pageTitle -%></title>
 
-    <% cssAssets.forEach(function(file){ %>
-    <link href="<%- file -%>" rel="stylesheet">
-    <% }); %>
+    <%- include src/favicons %>
 
-    <%- appCss -%>
+    <title><%= htmlWebpackPlugin.options.title %></title>
+
+    <% for (key in htmlWebpackPlugin.files.css) { %>
+    <link href="<%= htmlWebpackPlugin.files.css[key] %>" rel="stylesheet">
+    <% } %>
+
 </head>
 <body>
-    <div id="app"><%- appHtml -%></div>
+    <div id="app"></div>
 
-    <% jsAssets.forEach(function(file){ %>
-    <script src="<%- file -%>" async></script>
-    <% }); %>
-
+    <% for (key in htmlWebpackPlugin.files.chunks) { %>
+    <script src="<%= htmlWebpackPlugin.files.chunks[key].entry %>" type="text/javascript"></script>
+    <% } %>
 </body>
 </html>
