--- a/src/404-template.ejs
+++ b/src/404-template.ejs
@@ -1,18 +1,19 @@
 ---
 permalink: /404.html
 ---
+<!-- See https://help.github.com/articles/creating-a-custom-404-page-for-your-github-pages-site/ -->
 <!DOCTYPE html>
 <html>
 <head>
     <!--Script used to store the pathname in sessionStorage before redirecting to default path-->
     <script>
       if(typeof sessionStorage !== 'undefined'){
-        sessionStorage.redirect = location.pathname;
+        sessionStorage.missingPage = location.pathname;
       }
     </script>
     <meta charset="utf-8" />
     <meta http-equiv="refresh" content="0;URL='<%= htmlWebpackPlugin.options.redirectUrl %>'"/>
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>404 - Page Not Found</title>
 </head>
 <body>
     <!--All this nonsence is used to get the file size above 512 bytes-->
