--- a/src/index-template.ejs
+++ b/src/index-template.ejs
@@ -3,16 +3,18 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <%- include src/favicons %>
+
     <title><%= htmlWebpackPlugin.options.title %></title>
 
     <% for (key in htmlWebpackPlugin.files.css) { %>
     <link href="<%= htmlWebpackPlugin.files.css[key] %>" rel="stylesheet">
     <% } %>
 
-    <%= htmlWebpackPlugin.options.appcss %>
 </head>
 <body>
-    <div id="app"><%= htmlWebpackPlugin.options.appcontent %></div>
+    <div id="app"></div>
 
     <% for (key in htmlWebpackPlugin.files.chunks) { %>
     <script src="<%= htmlWebpackPlugin.files.chunks[key].entry %>" type="text/javascript"></script>
