--- a/src/html-template.ejs
+++ b/src/html-template.ejs
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <%- include src/favicons %>
+    <%- faviconHtml %>
 
     <title><%- pageTitle -%></title>
 
