--- a/src/components/LessonPage/ResetButton.scss
+++ b/src/components/LessonPage/ResetButton.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables';
 
 .container {
-  margin: 10px 10px 0 0;
+  margin: 0 10px 0 0;
 
   @media print {
     display: none;
