--- a/src/html-template.ejs
+++ b/src/html-template.ejs
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <script>
+    if (window.location.host !== 'localhost:8080' && window.location.protocol === 'http:') {
+      window.location.protocol = 'https:'
+    }
+  </script>
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <%- faviconHtml %>
+  <%- faviconHtml %>
 
-    <title><%- pageTitle -%></title>
+  <title><%- pageTitle -%></title>
 
-    <% cssAssets.forEach(function(file){ %>
-    <link href="<%- file -%>" rel="stylesheet">
-    <% }); %>
+  <% cssAssets.forEach(function(file){ %>
+  <link href="<%- file -%>" rel="stylesheet">
+  <% }); %>
 
-    <%- appCss -%>
+  <%- appCss -%>
 </head>
 <body>
-    <div id="app"><%- appHtml -%></div>
+  <div id="app"><%- appHtml -%></div>
 
-    <% jsAssets.forEach(function(file){ %>
-    <script src="<%- file -%>" async></script>
-    <% }); %>
+  <% jsAssets.forEach(function(file){ %>
+  <script src="<%- file -%>" async></script>
+  <% }); %>
 </body>
 </html>
