--- a/src/pages/PlaylistPage.scss
+++ b/src/pages/PlaylistPage.scss
@@ -1,15 +1,20 @@
 @import '../styles/variables';
 
+.container {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 .topMargin {
   margin-top: 0;
 
-  @media (min-width: $screen-sm-min) {
+  @media (min-width: 600px) {
     margin-top: 63px;
   }
 }
 
 .jumpTo {
-  @media (min-width: $screen-sm-min) {
+  @media (min-width: 600px) {
     height: 0;
   }
 }
