On FrontPage, for each course show sum of lessons in all languages. If not only main language checked, show flags, and in teacher mode show number of lessons per flag.

--- a/src/components/CourseList/LessonCount.scss
+++ b/src/components/CourseList/LessonCount.scss
@@ -1,10 +1,20 @@
 @import '../../styles/variables';
 
-.noFlag {
+.container {
   color: $color-gray;
+  text-align: center;
+}
+
+.center {
+  display: inline-block;
+  width: 100%;
 }
 
 .flag {
-  color: $color-gray;
+  padding: 0 5px;
+  white-space: nowrap;
+}
+
+.flagCount {
   padding-left: 5px;
 }
