--- a/src/index-template.ejs
+++ b/src/index-template.ejs
@@ -2,8 +2,9 @@
 <html>
 <head>
   <script>
-    if (window.location.hostname !== 'localhost' && window.location.protocol === 'http:') {
-      window.location.protocol = 'https:'
+    var loc = window.location;
+    if (loc.hostname !== 'localhost' && loc.hostname !== '127.0.0.1' && loc.protocol === 'http:') {
+      loc.protocol = 'https:'
     }
   </script>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
